--- a/index.html
+++ b/index.html
@@ -5,10 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Incognito ETML</title>
 </head>
+<style>
+    body{
+        color: white;
+        font-family: Arial, sans-serif;
+        background-color: black;
+    }
+    
+</style>
 <body>
-    <h1>Bienvenu sur ETML Incognito</h1>
-    <h2>Vous en avez marre de la censure totalitaire ?</h2>
-    <h2>Vous aussi vous pensez que c'était mieux quand on pouvait dire ce qu'on pensait sans se faire traiter de terroriste ?</h2>
-    <h2>Alors participer au développement de ce site ! Ici tout le monde peut créer des pages sur tout ce qui lui passe par la tête (à condition qu'il soit à l'ETML)</h2>
+    <div style = "text-align: center;">
+        <h1>Bienvenu sur ETML Incognito</h1>
+        <h2>Vous en avez marre de la censure totalitaire ?</h2>
+        <h2>Vous aussi vous pensez que c'était mieux quand on pouvait dire ce qu'on pensait sans se faire traiter de terroriste ?</h2>
+        <h2>Alors participer au développement de ce site ! Ici tout le monde peut créer des pages sur tout ce qui lui passe par la tête (à condition qu'il soit à l'ETML)</h2>
+        <button onclick="document.location='https://discord.gg/7wGTf9Kc'" style="width: 10vh; height: 3vh; border-radius: 2vh; background-color: rgb(48, 211, 48);">Notre serveur discord</button>
+
+    </div>
+
+    <h2>Voici les pages créer par les élèves de l'ETML (pour ajouter la votre il suffit de demander aux admnin)</h2>
+    <h2>Juste rien de 100% illegal sinon on sera ban :/</h2>
+    <ul>
+        <li><a href="page1.html" style="color: white;">Tiers list des profs</a></li>
+        <li><a href="page2.html" style="color: white;">Les têtes ...</a></li>
+        <li><a href="page3.html" style="color: white;">Page 3</a></li>
+    </ul>
 </body>
 </html>
