--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <h2>Voici les pages créer par les élèves de l'ETML (pour ajouter la votre il suffit de demander aux admnin)</h2>
     <h2>Juste rien de 100% illegal sinon on sera ban :/</h2>
     <ul>
-        <li><a href="page1.html" style="color: white;">Tiers list des profs</a></li>
-        <li><a href="page2.html" style="color: white;">Les têtes ...</a></li>
-        <li><a href="page3.html" style="color: white;">Page 3</a></li>
+        <li><a href="Page1.html" style="color: white;">Tiers list des profs</a></li>
+        <li><a href="Page2.html" style="color: white;">Les têtes ...</a></li>
+        <li><a href="Page3.html" style="color: white;">Page 3</a></li>
     </ul>
 </body>
 </html>
